CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Lab5 VERSION 0.1)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

FIND_PACKAGE(SFML 2.5 COMPONENTS graphics window audio REQUIRED)

INCLUDE_DIRECTORIES(
        lab PUBLIC
        "${PROJECT_SOURCE_DIR}/src"
        "${PROJECT_SOURCE_DIR}/src/Orbit"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

CONFIGURE_FILE(background.jpg "${CMAKE_CURRENT_BINARY_DIR}/src" COPYONLY)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS} ")